// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers fileDialog should handle OPEN_FILE 1`] = `
Object {
  "fileData": Object {
    "characters": 31,
    "contentVersion": undefined,
    "lines": 1,
    "loadedIn": 1,
    "outputs": Array [],
    "parameters": Array [],
    "resources": Array [],
    "schema": undefined,
    "variables": Array [],
  },
  "hierarchicalLayout": false,
  "selectedFilename": undefined,
}
`;

exports[`reducers fileDialog should handle OPEN_FILE_ERROR 1`] = `
Object {
  "fileData": null,
  "selectedFilename": "",
}
`;

exports[`reducers fileDialog should handle initial state 1`] = `
Object {
  "fileData": Object {
    "characters": 0,
    "contentVersion": "",
    "lines": 0,
    "loadedIn": 0,
    "outputs": Array [],
    "parameters": Array [],
    "resources": Array [],
    "schema": "",
    "variables": Array [],
  },
  "selectedFilename": "",
}
`;
